# pico_v9k

hardware/: Victor9K_pga2350.kicad_pcb  Victor9K_pga2350.kicad_prl  Victor9K_pga2350.kicad_pro  Victor9K_pga2350.kicad_sch  fp-info-cache  sym-lib-table
software/: ARM_PIO_Integration_Analysis.md  Agents.md  CLAUDE.md  CMakeLists.txt  Claude.md  README.md  Technical Overview of the Project.md  Victor 9000 Highlights.md  board_registers.pio  dma.c  dma_board.c  dma_read_write.pio  logging.c  logging.h  pio_coordination_diagram.md  sasi.c  sasi.h  sasi_log.c  sasi_log.h  scsi.c  scsi.h
software/pico_fujinet/: spi.c  spi.h
software/pico_storage/: fatfs_guard.c  fatfs_guard.h  hw_config.c  sd_storage.c  sd_storage.h  storage.c  storage.h
software/pico_victor/: board_registers.pio  board_registers_control.pio  board_registers_output.pio  bus_output_helper.pio  debug_queue.c  debug_queue.h  dma.c  dma.h  dma_cached.c  dma_defer.c  dma_defer.h  dma_fast.c  dma_fast.h  dma_irq_handler.c  dma_irq_handler.h  dma_master.pio  dma_optimize_example.c  dma_read_write.pio  dma_rw_control.pio  dma_rw_output.pio  dma_ultra_fast.c  dma_ultra_fast.h  dma_ultra_fast_cached.c  extio_helper.pio  fifo_helpers.c  fifo_helpers.h  iom_helper.pio  pio_shared.h  psram_trace.c  psram_trace.h  reg_queue_processor.c  reg_queue_processor.h  register_cache.c  register_irq_handlers.c  register_irq_handlers.h
software/pico_victor/tests/: CMakeLists.txt  clock_simulator.c  clock_simulator.h  test_clock_sideset.c  test_clock_sideset.pio  test_hold_hlda.pio
software/test/: CMakeLists.txt  benchmark_irq.c  on_device_runner.c  register_test.c  test_clock_check.c  test_dma.py  test_dma_cleaned.c  test_dma_diagnostic.c  test_dma_hardware.c  test_dma_safe.c  test_hold_hlda.c  test_pio_hold_control.c  test_pio_simple.c  test_sideset_explicit.c  test_sideset_validation.c  test_signal_simulator.c  victor_boot_test.c
software/test/dos_dma_test/: Makefile  README.md  README_MACOS.md  addr_mid.c  addrtest.c  boot_sequence_test.c  build.bat  build.sh  dma_verify.c  dmatest.c  hd_stress.c  makefile.wc  minimal.c  minimal_test_readme.txt  read.c  runtest.bat  sasi_perf_test.c  victor_boot_trace.c
software/test/dos_dma_test/cfg/: victor9k.cfg
software/tools/: analyze_bus_timing.py  analyze_dma_capture.py  analyze_extio_window.py  analyze_ir4_detail.py  analyze_logic_csv.py  analyze_vintage_dma.py  board_registers_probe.py  fifo_trace_analyzer.py  mame_log_parser.py
